# src/routes/users.js
@@ -3,16 +3,23 @@ const {
     getAllUsers, 
     createUser, 
     updateUser, 
-    updatePartialUser, 
+    getById, 
     deleteUser
 } = require('../controllers/users');
+const { 
+    postRequestValidations,
+    putRequestValidations,
+    getAllRequestValidation,
+    getRequestValidation,
+    deleteRequestValidations
+} = require('../middlewares/users')
 
 const router = Router();
 
-router.get('/', getAllUsers);
-router.post('/', createUser);
-router.put('/:id', updateUser);
-router.patch('/:id', updatePartialUser);
-router.delete('/:id', deleteUser);
+router.get('/', getAllRequestValidation, getAllUsers);
+router.post('/', postRequestValidations, createUser);
+router.put('/:id', putRequestValidations, updateUser);
+router.get('/:id', getRequestValidation, getById);
+router.delete('/:id',deleteRequestValidations, deleteUser);
 
 module.exports = router;
